--- a/.gitignore
+++ b/.gitignore
@@ -150,4 +150,7 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# SQLite database files
+*.sqlite3
+
 # End of https://www.toptal.com/developers/gitignore/api/django
